<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/All">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/data"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/music"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/obsuj"
            android:title="@string/menu_slideshow" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/ExitAndSetting">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/menu_help"
            />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/action_settings"
            />
    </group>
</menu>