<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingsFragment">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Theme"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:background="#DCDBDB" />

        <RadioButton
            android:id="@+id/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/Original" />

        <RadioButton
            android:id="@+id/Rassvet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DC9990"
            android:text="@string/Sunrise" />

        <RadioButton
            android:id="@+id/Day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ACCCCD"
            android:text="@string/Day" />

        <RadioButton
            android:id="@+id/Zakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#865366"
            android:text="@string/Sunset"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/Night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#132538"
            android:text="@string/Night"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:background="#DCDBDB" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonChangeTheme"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:onClick="SetBackground"
        android:text="@string/Change"
        android:textColor="#FFFFFF"
        app:backgroundTint="#675454"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDBDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeTheme"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/DeleteAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>