<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.discussion.FindDiscussionFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/MyDiscussion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="MyDiscussionClick"
            android:text="@string/myDiscussion"
            android:textColor="#777676"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

        <TextView
            android:id="@+id/CreateDiscussion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="MyDiscussionClick"
            android:text="@string/createDiscussion"
            android:textColor="#777676"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

        <TextView
            android:id="@+id/FindDiscussion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="MyDiscussionClick"
            android:text="@string/findDiscussion"
            android:textColor="#C33D13"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />
    </LinearLayout>

    <EditText
        android:id="@+id/findLine"
        android:layout_width="361dp"
        android:layout_height="27dp"
        android:autofillHints="no"
        android:background="@drawable/edittextstyle"
        android:ems="10"
        android:hint="@string/FindWithHead"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Find_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findLine"
        app:layout_constraintVertical_bias="0.08" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>